DTR-1416: Update page titles as per the properties in Confluence pages
# Conflicts:
#	app/views/CheckYourAnswersView.scala.html
#	conf/messages.en

--- a/app/views/AdvanceNoticeView.scala.html
+++ b/app/views/AdvanceNoticeView.scala.html
@@ -29,7 +29,7 @@
 
 @(hmrcHelplineUrl: String, totalAmount: String, dueDate: String,  directDebitReference: String, bankAccountName: String, accountNumber: String, sortCode: String, paymentPlanReference: String, paymentPlanLink: Call)(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = titleForManageJourneyNoForm(messages("advanceNotice.title")), backLink = Some(paymentPlanLink.url)) {
+@layout(pageTitle = titleNoForm(messages("advanceNotice.title")), backLink = Some(paymentPlanLink.url)) {
 
     @h1("advanceNotice.heading")
 
