--- a/app/views/PaymentDateView.scala.html
+++ b/app/views/PaymentDateView.scala.html
@@ -28,7 +28,7 @@
 
 @(form: Form[_], mode: Mode, earliestPaymentDateNumeric: String, call: Call)(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = titleForSetupJourney(form, messages("paymentDate.title")), backLink = Some(call.url)) {
+@layout(pageTitle = title(form, messages("paymentDate.title")), backLink = Some(call.url)) {
 
     @formHelper(action = routes.PaymentDateController.onSubmit(mode), Symbol("autoComplete") -> "off") {
 
