--- a/app/views/PlanStartDateView.scala.html
+++ b/app/views/PlanStartDateView.scala.html
@@ -29,7 +29,7 @@
 
 @(form: Form[_], mode: Mode, dateTimeNumeric: String, source: DirectDebitSource, call: Call)(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = titleForSetupJourney(form, messages("planStartDate.title")), backLink = Some(call.url)) {
+@layout(pageTitle = title(form, messages("planStartDate.title")), backLink = Some(call.url)) {
 
     @formHelper(action = routes.PlanStartDateController.onSubmit(mode), Symbol("autoComplete") -> "off") {
 
