--- a/app/views/AccountDetailsNotVerifiedView.scala.html
+++ b/app/views/AccountDetailsNotVerifiedView.scala.html
@@ -27,7 +27,7 @@ link: Link
 
 @(payingHmrcUrl: String, retryDate: String)(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = titleForSetupJourneyNoForm(messages("accountDetailsNotVerified.title")), showBackLink = false) {
+@layout(pageTitle = titleNoForm(messages("accountDetailsNotVerified.title")), showBackLink = false) {
    @header1("accountDetailsNotVerified.heading")
    @paragraphWithParam("accountDetailsNotVerified.p1", s"<strong>$retryDate</strong>")
    @paragraphWithLink(
