--- a/app/views/AmendPaymentAmountView.scala.html
+++ b/app/views/AmendPaymentAmountView.scala.html
@@ -26,7 +26,7 @@
 
 @(form: Form[_], mode: Mode, call: Call)(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = titleForManageJourney(form, messages("amendPaymentAmount.title")), backLink = Some(call.url)) {
+@layout(pageTitle = title(form, messages("amendPaymentAmount.title")), backLink = Some(call.url)) {
 
  @formHelper(action = routes.AmendPaymentAmountController.onSubmit(mode), Symbol("autoComplete") -> "off") {
 
