--- a/app/views/CancelPaymentPlanView.scala.html
+++ b/app/views/CancelPaymentPlanView.scala.html
@@ -31,7 +31,7 @@
 
 @(form: Form[_], planType: String, paymentReference: String, paymentAmount: BigDecimal)(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = titleForManageJourney(form, messages("cancelPaymentPlan.title")), backLink = Some(routes.PaymentPlanDetailsController.onPageLoad().url)) {
+@layout(pageTitle = title(form, messages("cancelPaymentPlan.title")), backLink = Some(routes.PaymentPlanDetailsController.onPageLoad().url)) {
 
     @formHelper(action = routes.CancelPaymentPlanController.onSubmit(), Symbol("autoComplete") -> "off") {
 
