--- a/app/views/CheckYourSuspensionDetailsView.scala.html
+++ b/app/views/CheckYourSuspensionDetailsView.scala.html
@@ -26,7 +26,7 @@
 
     @(list: SummaryList, mode: Mode, call: Call)(implicit request: Request[_], messages: Messages)
     
-        @layout(pageTitle = titleNoFormManagePlan(messages("checkYourSuspensionDetails.title"))) {
+        @layout(pageTitle = titleNoForm(messages("checkYourSuspensionDetails.title"))) {
         
         @formHelper(action = routes.CheckYourSuspensionDetailsController.onSubmit(mode), Symbol("autoComplete") -> "off") {
             @h1("checkYourSuspensionDetails.heading")
