--- a/app/views/PaymentReferenceView.scala.html
+++ b/app/views/PaymentReferenceView.scala.html
@@ -27,7 +27,7 @@
 
 @(form: Form[_], mode: Mode, selectedAnswer: Option[DirectDebitSource], call: Call)(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = titleForSetupJourney(form, messages("paymentReference.title")), backLink = Some(call.url)) {
+@layout(pageTitle = title(form, messages("paymentReference.title")), backLink = Some(call.url)) {
 
     @formHelper(action = routes.PaymentReferenceController.onSubmit(mode)) {
 
