--- a/app/views/SuspendPaymentPlanView.scala.html
+++ b/app/views/SuspendPaymentPlanView.scala.html
@@ -25,7 +25,7 @@
 
 @(mode: Mode)(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = titleNoFormManagePlan(messages("suspendPaymentPlan.title")), backLink = Some(routes.PaymentPlanDetailsController.onPageLoad().url)) {
+@layout(pageTitle = titleNoForm(messages("suspendPaymentPlan.title")), backLink = Some(routes.PaymentPlanDetailsController.onPageLoad().url)) {
 
     <h1 class="govuk-heading-xl">@messages("suspendPaymentPlan.heading")</h1>
     @paragraph("suspendPaymentPlan.p1")
