--- a/app/views/DirectDebitConfirmationView.scala.html
+++ b/app/views/DirectDebitConfirmationView.scala.html
@@ -30,7 +30,7 @@
 
 @(hmrcHelplineUrl: String,referenceNumber: String, paymentAmount: String, paymentDate: String, directDebitDetails: SummaryList, paymentDetails: SummaryList)(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = titleForSetupJourneyNoForm(messages("directDebitConfirmation.title")), showBackLink = false) {
+@layout(pageTitle = titleNoForm(messages("directDebitConfirmation.title")), showBackLink = false) {
 
     @govukPanel(Panel(
         title = messages("directDebitConfirmation.panel.title"),
