DTR-1375: update logic and test on show suspend link and show change/remove links along with suspension period text, even if the suspsension period has passed

--- a/app/views/PaymentPlanDetailsView.scala.html
+++ b/app/views/PaymentPlanDetailsView.scala.html
@@ -44,7 +44,7 @@
             @paragraph("paymentPlanDetails.budgetCanNotChange.p1")
         }
 
-        @if(isSuspensionActive) {
+        @if(isSuspensionActive && isPlanChangeable) {
             <p class="govuk-inset-text">
                 @messages("paymentPlanDetails.inset.text", suspensionStartDate, suspensionEndDate)
             </p>
