DTR-588: date error fix

--- a/app/views/TestOnlyPaymentPlanUpdateView.scala.html
+++ b/app/views/TestOnlyPaymentPlanUpdateView.scala.html
@@ -34,8 +34,7 @@
 @layout(pageTitle = titleNoForm(messages("amendPaymentPlanUpdate.title")), showBackLink = false) {
 
     @confirmationPanel(
-        title = messages("amendPaymentPlanUpdate.panel.title"),
-        classes = "govuk-!-margin-bottom-2"
+        title = messages("amendPaymentPlanUpdate.panel.title")
     )
 
     @h2("amendPaymentPlanUpdate.h1")
