DTR-588: Fixing the browser back button and dates

--- a/app/views/testonly/TestOnlyDuplicateWarningView.scala.html
+++ b/app/views/testonly/TestOnlyDuplicateWarningView.scala.html
@@ -39,10 +39,10 @@
         }
 
         @govukLabel(HmrcPageHeadingLabel.apply(
-            content = Text(messages("duplicateWarning.h1"))
+            content = Text(messages("testOnlyDuplicateWarning.h1"))
         ).withCssClass("govuk-!-margin-bottom-0"))
 
-        @paragraph("duplicateWarning.p1")
+        @paragraph("testOnlyDuplicateWarning.p1")
 
         @h2("testOnlyDuplicateWarning.h2")
 
