--- a/app/views/DuplicateWarningForAddOrCreatePPView.scala.html
+++ b/app/views/DuplicateWarningForAddOrCreatePPView.scala.html
@@ -14,12 +14,17 @@
  * limitations under the License.
  *@
 
+@import viewmodels.LegendSize._
+@import views.html.components.*
+
 @this(
     layout: templates.Layout,
     formHelper: FormWithCSRF,
     govukErrorSummary: GovukErrorSummary,
     govukRadios: GovukRadios,
-    govukButton: GovukButton
+    govukButton: GovukButton,
+    paragraph: Paragraph,
+    h1: Header1
 )
 
 @(form: Form[_], mode: Mode)(implicit request: Request[_], messages: Messages)
@@ -32,10 +37,14 @@
             @govukErrorSummary(ErrorSummaryViewModel(form))
         }
 
+        @h1("duplicateWarningForAddOrCreatePP.heading")
+
+        @paragraph("duplicateWarningForAddOrCreatePP.p1")
+
         @govukRadios(
             RadiosViewModel.yesNo(
                 field = form("value"),
-                legend = LegendViewModel(messages("duplicateWarningForAddOrCreatePP.heading")).asPageHeading()
+                legend = LegendViewModel(messages("duplicateWarningForAddOrCreatePP.h2")).asSecondaryHeading(Medium)
             )
         )
 
