DTR-907 - Amend payment plan for Single Payment Plan

--- a/app/views/testonly/TestOnlyAmendPlanStartDateView.scala.html
+++ b/app/views/testonly/TestOnlyAmendPlanStartDateView.scala.html
@@ -24,18 +24,17 @@
     govukWarningText: GovukWarningText,
     govukButton: GovukButton,
     h1: Header1,
-    p: Paragraph
+    p: Paragraph,
+    mainErrorSummary: MainErrorSummary
 )
 
-@(form: Form[_], mode: Mode, call: Call)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], mode: Mode, earliestPlanStartDate: String, call: Call)(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = title(form, messages("testOnlyAmendPlanStartDate.title")), backLink = Some(call.url)) {
 
     @formHelper(action = controllers.testonly.routes.TestOnlyAmendPlanStartDateController.onSubmit(mode), Symbol("autoComplete") -> "off") {
 
-        @if(form.errors.nonEmpty) {
-            @govukErrorSummary(ErrorSummaryViewModel(form, errorLinkOverrides = Map("value" -> "value.day")))
-        }
+        @mainErrorSummary(form)
 
         @govukDateInput(
             DateViewModel(
@@ -47,7 +46,7 @@
                       govukWarningText(
                         WarningText(content = HtmlContent(messages("testOnlyAmendPlanStartDate.warning")))
                       ),
-                      s"<p class='govuk-!-margin-top-7'>${messages("testOnlyAmendPlanStartDate.hint")}</p>"
+                      s"<p class='govuk-!-margin-top-7'>${messages("testOnlyAmendPlanStartDate.hint", earliestPlanStartDate)}</p>"
                     ).mkString
             )))
         )
